@@ -8,7 +8,7 @@
 
    This script is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 3, or (at your option)
+   the Free Software Foundation; either version 22, or (at your option)
    any later version.
 
    sawfish is distributed in the hope that it will be useful, but
