@@ -1,3 +1,8 @@
+2009-07-26  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/tabs/tab.jl
+	* lisp/sawfish/wm/tabs/tabgroup.jl
+	* lisp/sawfish/wm/util/marks.jl: fixed license header
+
 2009-07-25  Christopher Bratusek <zanghar@freenet.de>
 	* src/Makefile.in: include $CFLAGS in gtk-style rule
 
